--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -133,7 +133,7 @@ a {
 }
 
 a:hover {
-  color: var(--brand-teal); /* αν θες hover ίδιο με navbar */
+  color: var(--brand-teal);
 }
 
 /* =========================
@@ -187,6 +187,7 @@ a:hover {
   width: 100%;
   height: auto;
   object-fit: cover;
+  z-index: 1;
 }
 
 /* Κουμπί του hero (γεμάτο, pill) */
@@ -242,6 +243,16 @@ a:hover {
   -webkit-text-fill-color: transparent;
   display: inline-block;
   font-weight: 800;
+}
+
+.page__banner-shape img {
+  opacity: 0.2;
+}
+
+@media (max-width: 992px) {
+  .page__banner-shape {
+    display: none;
+  }
 }
 
 /* =========================
@@ -376,7 +387,7 @@ a:hover {
 /* ΚΑΤΩ section*/
 .services__one {
   position: relative;
-  padding-top: 80px; /* “χώρος ασφαλείας” μέσα στο section */
+  padding-top: 80px;
   background: linear-gradient(180deg, #bedacf 0%, #88bbb9 100%);
 }
 
@@ -428,7 +439,7 @@ a:hover {
   flex-direction: column;
   justify-content: flex-start;
   min-height: auto;
-  height: 100%; /* οι κάρτες σε ίδια σειρά ευθυγραμμίζονται */
+  height: 100%;
 }
 
 /* Μικρότερο κενό ανάμεσα στις σειρές */
@@ -1208,10 +1219,6 @@ a:hover {
 
 .page__banner {
   background: linear-gradient(180deg, #ffffff 0%, #deede7 100%);
-}
-
-.page__banner-shape img {
-  opacity: 0.2;
 }
 
 /* =========================
