--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -356,12 +356,17 @@ a:hover {
   height: 400px;
   border-radius: 12px;
   overflow: hidden;
+  position: relative;
+  box-shadow: 0 18px 20px -10px rgba(0, 0, 0, 0.35);
+  margin-bottom: 28px;
 }
 
 .blog__one-single-blog-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
+  border-radius: 12px;
 }
 
 .blog__one-single-blog-content h4 {
@@ -381,7 +386,7 @@ a:hover {
 /* ΠΑΝΩ section  */
 .blog__one {
   background: linear-gradient(180deg, #ffffff 0%, #deede7 50%, #bedacf 100%);
-  padding-bottom: 160px; /* όσο θες να κατεβαίνει το bg */
+  padding-bottom: 160px;
 }
 
 /* ΚΑΤΩ section*/
@@ -1471,4 +1476,10 @@ top bar
     white-space: normal;
     padding: 10px 12px;
   }
+}
+/* =========================
+Footer-terms
+   ========================= */
+.project__details.section-padding {
+  padding-bottom: 0px !important; /* ή 0 αν θες να κολλήσει στο footer */
 }
